datasets/scherzer-pmdbs-sn-rnaseq-mtg-hybsel/archive/v1.1/DOI/scherzer-pmdbs-sn-rnaseq-mtg-hybsel_README.md
This Zenodo deposit contains a publicly available description of the Dataset:

# "PD5D_MTG_snRNAseq_hybsel".

## Dataset Description:
 
This dataset contains the raw data in FASTQ format for single-nucleus RNA  sequencing (snRNAseq) enriched with Agilent SureSelect for reads from a list  of targeted transcripts for human middle temporal gyrus (MTG) samples from  Parkinson's patients and healthy controls. This data comes from the same 10X  libraries as PD5D_MTG_snRNAseq, except with the additional enrichment  step before sequencing. It's part of the PD5D cohort, where the same subjects  were also profiled with other omics assays incl. genotyping, single-cell  ATACseq, and spatial transcriptomics.


**Authors:**

* Simmons, Sean; [ORCID:0000-0002-1537-4000](0000-0002-1537-4000)
* Scherzer, Clemens; [ORCID:0000-0002-0567-9193](0000-0002-0567-9193)
* Dong, Xianjun; [ORCID:0000-0002-8052-9320](0000-0002-8052-9320)
* Levin, Joshua; [ORCID:0000-0002-0170-3598](0000-0002-0170-3598)
* Serrano, Geidy; [ORCID:0000-0002-9527-2011](0000-0002-9527-2011)
* Beach, Thomas; [ORCID:0000-0003-3296-6128](0000-0003-3296-6128)
* Cline, Madison; [ORCID:0000-0001-9672-7738](0000-0001-9672-7738)
* Liao, Zhixiang; [ORCID:0000-0001-7014-5465](0000-0001-7014-5465)
* Tuncali, Idil; [ORCID:0000-0001-5549-3082](0000-0001-5549-3082)
* Sharma, Monika; [ORCID:0000-0002-7258-1399](0000-0002-7258-1399)
* Parker, Jacob; [ORCID:0000-0001-9425-6418](0000-0001-9425-6418)
* Lin, Zechuan; [ORCID:0000-0003-2270-5194](0000-0003-2270-5194)
* Yuan, Jie; [ORCID:0000-0002-5626-2881](0000-0002-5626-2881)
* Haywood, Nathan; [ORCID:0000-0003-2213-5080](0000-0003-2213-5080)
* Lin, Maoxuan; [ORCID:0000-0001-5191-1857](0000-0001-5191-1857)
* Kim, Kwanho; [ORCID:0000-0002-4448-3193](0000-0002-4448-3193)
* Teng, Xufei; [ORCID:0000-0001-9282-4282](0000-0001-9282-4282)
* El Kodsi, Daniel; [ORCID:0000-0002-8896-0043](0000-0002-8896-0043)


**ASAP Team:** Scherzer

**Dataset Name:** scherzer-pmdbs-sn-rnaseq-mtg-hybsel, v1.1

**Principal Investigator:** Dr. Joshua Levin, Jlevin@broadinstitute.org

**Dataset Submitter:** Dr. Sean Simmons, Ssimmons@broadinstitute.org

**Publication DOI:** 10.1101/2024.08.13.607784

**Grant IDs:** ['ASAP-000301']

**ASAP Lab:** Scherzer, Dong, and Levin

**ASAP Project:** Parkinson5D: deconstructing proximal disease mechanisms across cells, space, and  progression

**Project Description:** Here we will develop a molecular atlas of Parkinson's disease (PD) useful for mapping  GWAS/familial genetics to proximal mechanisms in five dimensions: brain cells (1D),  brain space (3D), and disease stage (1D). We will reveal how genetic variants  modulate transcription in specific cells in specific topographic locations of midbrain  and cortex during the progression of neuropathology from healthy brains to  prodromal to symptomatic disease. This research will for the first time integrate  whole genome sequencing, single-nucleus transcriptomics, and high-resolution  spatial transcriptomics of 100 human brains with cell-specific mechanistic analyses in  model systems.

**Submission Date:** 2025-10-31

__________________________________________


> This dataset is made available to researchers via the ASAP CRN Cloud: [cloud.parkinsonsroadmap.org](https://cloud.parkinsonsroadmap.org). Instructions for how to request access can be found in the [User Manual](https://storage.googleapis.com/asap-public-assets/wayfinding/ASAP-CRN-Cloud-User-Manual.pdf).

> This research was funded by the Aligning Science Across Parkinson's Collaborative Research Network (ASAP CRN), through the Michael J. Fox Foundation for Parkinson's Research (MJFF).

> This Zenodo deposit was created by the ASAP CRN Cloud staff on behalf of the dataset authors. It provides a citable reference for a CRN Cloud Dataset

